--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2018"
 resolver = "2"
 
 [dependencies]
-wgpu = "0.13.1"
 cgmath = "0.18"
 env_logger = "0.9"
 futures = "0.3"
@@ -18,3 +17,4 @@ winit = "0.26"
 bytemuck = { version = "1.4", features = ["derive"] }
 anyhow = "1.0"
 rand ="0.8"
+ferrux_canvas = "0.3.2"
