--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "wgpu02"
+name = "anti-aliasing"
 version = "0.1.0"
-authors = ["jack xu"]
+authors = ["Ruoqi Huang, "]
 edition = "2018"
 resolver = "2"
 
